# smash_tourney_manager_gg

./: README.md  package-lock.json  package.json
.github/workflows/: build.yml
public/character-icons/: README.md
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: BracketBoard.vue  CharacterPicker.vue  SetEditor.vue  WebcamPanel.vue
src/lib/: api.js  bracket-utils.js  characters.js  set-utils.js
