[package]
name = "main_tourney_manager_gg"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "main_tourney_manager_gg_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde", "clock"] }
scap = "0.0.8"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
base64 = "0.22"

# scap 0.0.8's Windows backend was written against windows-capture 1.3.6's
# Settings::new() signature (5 args). windows-capture 1.5.0 added 3 more
# required args to that same function without a major version bump, which
# breaks scap's build under normal caret-range resolution. Pin to the exact
# version scap 0.0.8 was actually released against until scap updates.
[target.'cfg(target_os = "windows")'.dependencies.windows-capture]
version = "=1.3.6"
